# ROS

./: .gitignore
res/: Stereocalib  calib_left.txt  calib_right.txt  ost.txt
res/PA10Scene/: ScenePA10RoVi1.wc.xml  ScenePA10RoVi1Kin.wc.xml  ScenePA10RoVi2Demo.wc.xml  robwork-0.7.0.cfg.xml  rwsettings.xml  sceneComplete.wc.xml  sceneCompleteWithBalls.wc.xml
res/PA10Scene/.svn/: wc.db
res/PA10Scene/Geometry/: ball.ac  ballPredicted.ac
res/PA10Scene/PA10/: pa10.xml
res/data/: 22-05-15_22-22.csv  22-05-15_22-26.csv  csv2mtlb.m  log.csv  measurement.m  measurement.txt  process.bag  process.csv  process.m  process.txt  sensor_msgs_temperature_extract.m  static.bag  static.csv
res/data/gnuplot/: ball_kalman_2d.gp  ball_kalman_3d.gp  ball_kalman_error.gp  common.gp.in  genplots.bash  q_real_desired.gp
scripts/: robwork-0.7.0.cfg.xml  roviJorge  rwsettings.xml
src/: CMakeLists.txt  EpipolarGeometry.cpp  read_image_client.cpp
src/PA10Controller/: CMakeLists.txt  CMakeLists_rosbuild.txt  package.xml
src/PA10Controller/src/: pa10_client.cpp  pa10_server.cpp  pa10_server.cpp~  pa10_server.h
src/PA10Controller/srv/: addToQueue.srv  clearJointQueue.srv  getJointConfig.srv  setJointConfig.srv
src/balltracker/: CMakeLists.txt  package.xml
src/balltracker/src/: balltracker_node.cpp  syncedimages.cpp  syncedimages.h
src/beginners_tutorials/: CMakeLists.txt  package.xml
src/beginners_tutorials/src/: talker.cpp
src/camera_calibration/: CMakeCache.txt  Calibration  DefaultTutorial.xml  Makefile  camera_calibration.cpp  cmake_install.cmake  out_camera_data.xml  tutorialList.xml
src/camera_plugin/: CMakeLists.txt
src/camera_plugin/src/: CameraPlugin.cpp  CameraPlugin.hpp  qtmain.cpp  ui_CameraPlugin.h
src/kalman_filter/: CMakeLists.txt  package.xml
src/kalman_filter/src/: kalman_filter_node.cpp
src/log/: CMakeLists.txt  package.xml
src/log/src/: gnuplot-iostream.h  log_node.cpp
src/monocamera_dummy/: CMakeLists.txt  MarkerA.ppm  MarkerB.ppm  MarkerC.ppm  MarkerD.ppm  ownA.ppm  ownB.ppm  ownC.ppm  ownD.ppm  package.xml
src/monocamera_dummy/src/: monocamera_dummy.cpp
src/pa10_dummy/: CMakeLists.txt  package.xml  points.txt
src/pa10_dummy/src/: pa10_client.cpp  pa10_server.cpp
src/pa10_plugin/: CMakeLists.txt  package.xml
src/pa10_plugin/src/: GlLines.cpp  GlLines.hpp  SamplePlugin.cpp  SamplePlugin.hpp  SampleWidget.cpp  SampleWidget.hpp  SampleWidget.ui  nodethread.cpp  nodethread.h  pa10plugin.cpp  pa10plugin.h  rosnodethread.cpp  rosnodethread.h  rosnodethreadimages.cpp  rosnodethreadimages.h  sampleplugin_global.h  ui_SampleWidget.h
src/pa10_plugin/src/old/: MarchingCube.cpp  MarchingCube.hpp
src/pa10_plugin/ui/: pa10plugin.ui
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/msg/: Q.msg  Q_real.msg
src/path_planning/src/: path_planning_node.cpp
src/points_server/: CMakeLists.txt  package.xml
src/points_server/res/: points.txt
src/points_server/src/: points_server_node.cpp
src/read_image/: CMakeLists.txt  package.xml
src/read_image/src/: read_image_client.cpp  read_pointcloud_client.cpp
src/ros_rws_plugin/: CMakeLists.txt  package.xml
src/ros_rws_plugin/src/: nodethread.cpp  nodethread.hpp  rwsplugin.cpp  rwsplugin.hpp
src/ros_rws_plugin/ui/: rwsplugin.ui
src/tracking/: CMakeLists.txt  package.xml
src/tracking/src/: tracking_ball.cpp  tracking_node.cpp
