<?xml version="1.0"?>
<package>
  <name>pa10_plugin</name>
  <version>0.1.0</version>
  <description>The PA10 RobWork Studio plugin.</description>
  <maintainer email="kim.schwaner@gmail.com">Kim Lindberg Schwaner</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
